fixed accolade scaling and clipping(cropping) issues.  this included changing the image used and updating the CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,16 @@
 }
 
 #accDiv {
-	background: url(../images/Dapper12.png), #448aff;
-	background-size: cover;
+	background: url(../images/Dapper11.png), #448aff;
+	/*background-size: cover;*/
 	background-repeat: no-repeat;
 	height:215px;
-	padding-bottom: 15px;
+	padding-bottom: 0px;
+	background-size: contain;
+    background-position: center;
+    background-color: white;
 }
+
 
 #headerTitle {
 	color: rgb(255,247,247);
